{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 882,
  "lineage": "767b514a-ef11-c429-972b-1c0c90a0faf4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion00_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082f688c4f50a6c39",
            "arn": "arn:aws:ec2:eu-central-1:116914611070:elastic-ip/eipalloc-082f688c4f50a6c39",
            "association_id": "eipassoc-018fe019b0d76c264",
            "domain": "vpc",
            "id": "eipalloc-082f688c4f50a6c39",
            "instance": "i-0269f2ab96e4cecbf",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ab01e76d6fd3696d",
            "private_dns": "ip-10-0-255-10.eu-central-1.compute.internal",
            "private_ip": "10.0.255.10",
            "public_dns": "ec2-3-69-112-129.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.112.129",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "d13-bastionn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ebb2b898eebe380",
            "arn": "arn:aws:ec2:eu-central-1:116914611070:instance/i-0269f2ab96e4cecbf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0269f2ab96e4cecbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "AWS_RSA01-oracle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0ab01e76d6fd3696d"
              }
            ],
            "primary_network_interface_id": "eni-0ab01e76d6fd3696d",
            "private_dns": "ip-10-0-255-10.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.255.10",
            "public_ip": "3.69.112.129",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aef59d1e4f63ecdc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041dc9c3f1e75f9c5",
            "tags": {
              "Name": "d13-bastionn"
            },
            "tags_all": {
              "Name": "d13-bastionn"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf34c571c8e68379"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "i-0269f2ab96e4cecbf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_network_interface.d13-bastionn_iface00",
            "aws_security_group.sg00",
            "aws_subnet.publicsubnet00a",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "d13a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ebb2b898eebe380",
            "arn": "arn:aws:ec2:eu-central-1:116914611070:instance/i-084eaee2a24e5d914",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084eaee2a24e5d914",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_RSA01-oracle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0db08a879a37f5560"
              }
            ],
            "primary_network_interface_id": "eni-0db08a879a37f5560",
            "private_dns": "ip-10-0-0-10.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c2575b8bc7410d63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03632707853315aa3",
            "tags": {
              "Name": "d13a-10.0.0.10"
            },
            "tags_all": {
              "Name": "d13a-10.0.0.10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0bf34c571c8e68379"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "i-084eaee2a24e5d914",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_network_interface.d13a_iface00",
            "aws_security_group.sg00",
            "aws_subnet.privsubnet00a",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:internet-gateway/igw-002132aabf1a8d392",
            "id": "igw-002132aabf1a8d392",
            "owner_id": "116914611070",
            "region": "eu-central-1",
            "tags": {
              "Name": "IGW00"
            },
            "tags_all": {
              "Name": "IGW00"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:loadbalancer/app/lb00/aab9e08b2ac9018c",
            "arn_suffix": "app/lb00/aab9e08b2ac9018c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb00-1353610172.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:loadbalancer/app/lb00/aab9e08b2ac9018c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb00",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-0bf34c571c8e68379"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c704047bdfbad7f"
              },
              {
                "subnet_id": "subnet-041dc9c3f1e75f9c5"
              },
              {
                "subnet_id": "subnet-08e00dac3b776f5cb"
              }
            ],
            "subnets": [
              "subnet-00c704047bdfbad7f",
              "subnet-041dc9c3f1e75f9c5",
              "subnet-08e00dac3b776f5cb"
            ],
            "vpc_id": "vpc-01f7ee6cf357c357e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:loadbalancer/app/lb00/aab9e08b2ac9018c"
          },
          "dependencies": [
            "aws_security_group.sg00",
            "aws_subnet.publicsubnet00a",
            "aws_subnet.publicsubnet00b",
            "aws_subnet.publicsubnet00c",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41",
            "certificate_arn": "arn:aws:acm:eu-central-1:116914611070:certificate/809a1308-40b0-4773-8244-e558ee21f263",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found. Please try www.acucaraccia.com \u003cbr\u003e\n",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:loadbalancer/app/lb00/aab9e08b2ac9018c",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41"
          },
          "dependencies": [
            "aws_acm_certificate.acm_certificate00",
            "aws_lb.lb00",
            "aws_security_group.sg00",
            "aws_subnet.publicsubnet00a",
            "aws_subnet.publicsubnet00b",
            "aws_subnet.publicsubnet00c",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "acucaraccia_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:targetgroup/lb-target-group00/57b6b5bb0a2ea205",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener-rule/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41/4d460b594a3463c5",
            "condition": [
              {
                "host_header": [
                  {
                    "regex_values": [],
                    "values": [
                      "acucaraccia.com",
                      "www.acucaraccia.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener-rule/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41/4d460b594a3463c5",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41",
            "priority": 101,
            "region": "eu-central-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener-rule/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41/4d460b594a3463c5"
          },
          "dependencies": [
            "aws_acm_certificate.acm_certificate00",
            "aws_lb.lb00",
            "aws_lb_listener.listener00",
            "aws_lb_target_group.lb_target_group00",
            "aws_security_group.sg00",
            "aws_subnet.publicsubnet00a",
            "aws_subnet.publicsubnet00b",
            "aws_subnet.publicsubnet00c",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "acucaraccia_pattern",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:targetgroup/lb-target-group00/57b6b5bb0a2ea205",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener-rule/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41/17246fe1daa6ae41",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/acucaraccia",
                      "/acucaraccia/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener-rule/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41/17246fe1daa6ae41",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41",
            "priority": 100,
            "region": "eu-central-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:listener-rule/app/lb00/aab9e08b2ac9018c/f896d75cc1c31b41/17246fe1daa6ae41"
          },
          "dependencies": [
            "aws_acm_certificate.acm_certificate00",
            "aws_lb.lb00",
            "aws_lb_listener.listener00",
            "aws_lb_target_group.lb_target_group00",
            "aws_security_group.sg00",
            "aws_subnet.publicsubnet00a",
            "aws_subnet.publicsubnet00b",
            "aws_subnet.publicsubnet00c",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:targetgroup/lb-target-group00/57b6b5bb0a2ea205",
            "arn_suffix": "targetgroup/lb-target-group00/57b6b5bb0a2ea205",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:targetgroup/lb-target-group00/57b6b5bb0a2ea205",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:116914611070:loadbalancer/app/lb00/aab9e08b2ac9018c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group00",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:116914611070:targetgroup/lb-target-group00/57b6b5bb0a2ea205"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_provision_zones": "enabled",
            "auto_scaling_ips": "enabled",
            "availability_mode": "regional",
            "connectivity_type": "public",
            "id": "nat-11b565600567d6701",
            "region": "eu-central-1",
            "regional_nat_gateway_address": [
              {
                "allocation_id": "eipalloc-0787af7b7ee45de49",
                "association_id": "eipassoc-07ed1b2151c7e958b",
                "availability_zone": "eu-central-1b",
                "availability_zone_id": "euc1-az3",
                "public_ip": "3.126.201.252",
                "status": "succeeded"
              },
              {
                "allocation_id": "eipalloc-09633630d8959c7c9",
                "association_id": "eipassoc-08b8bd9be41ee5b0a",
                "availability_zone": "eu-central-1a",
                "availability_zone_id": "euc1-az2",
                "public_ip": "35.156.151.165",
                "status": "succeeded"
              },
              {
                "allocation_id": "eipalloc-0ac4907e405312a83",
                "association_id": "eipassoc-08c8986cdb348487e",
                "availability_zone": "eu-central-1c",
                "availability_zone_id": "euc1-az1",
                "public_ip": "63.181.238.255",
                "status": "succeeded"
              }
            ],
            "regional_nat_gateway_auto_mode": "enabled",
            "route_table_id": "rtb-010ee33b6b7b7d484",
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "d13-bastionn_iface00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:network-interface/eni-0ab01e76d6fd3696d",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c1951744125fd7e0",
                "device_index": 0,
                "instance": "i-0269f2ab96e4cecbf",
                "network_card_index": 0
              }
            ],
            "id": "eni-0ab01e76d6fd3696d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:2c:92:16:24:4d",
            "owner_id": "116914611070",
            "private_ip": "10.0.255.10",
            "private_ip_list": [
              "10.0.255.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.255.10"
            ],
            "private_ips_count": 0,
            "region": "eu-central-1",
            "security_groups": [
              "sg-0bf34c571c8e68379"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041dc9c3f1e75f9c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg00",
            "aws_subnet.publicsubnet00a",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "d13a_iface00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:network-interface/eni-0db08a879a37f5560",
            "attachment": [
              {
                "attachment_id": "eni-attach-026ecd407839ef399",
                "device_index": 0,
                "instance": "i-0be762930d2d573a7",
                "network_card_index": 0
              }
            ],
            "id": "eni-0db08a879a37f5560",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:2a:00:e0:a9:9f",
            "owner_id": "116914611070",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "region": "eu-central-1",
            "security_groups": [
              "sg-0bf34c571c8e68379"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03632707853315aa3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg00",
            "aws_subnet.privsubnet00a",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw00_rt00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:route-table/rtb-0f7f2e14f1450a049",
            "id": "rtb-0f7f2e14f1450a049",
            "owner_id": "116914611070",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002132aabf1a8d392",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "rtb-0f7f2e14f1450a049",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat00_rt00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:route-table/rtb-0b03caddde15d1625",
            "id": "rtb-0b03caddde15d1625",
            "owner_id": "116914611070",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-11b565600567d6701",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "rtb-0b03caddde15d1625",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_nat_gateway.nat00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw00_rt00_assoc00a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a7d8adb65507203",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f7f2e14f1450a049",
            "subnet_id": "subnet-041dc9c3f1e75f9c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw00",
            "aws_route_table.igw00_rt00",
            "aws_subnet.publicsubnet00a",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw00_rt00_assoc00b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094251ae762adb28e",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f7f2e14f1450a049",
            "subnet_id": "subnet-00c704047bdfbad7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw00",
            "aws_route_table.igw00_rt00",
            "aws_subnet.publicsubnet00b",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw00_rt00_assoc00c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c722089bc10ca870",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f7f2e14f1450a049",
            "subnet_id": "subnet-08e00dac3b776f5cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw00",
            "aws_route_table.igw00_rt00",
            "aws_subnet.publicsubnet00c",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat00_rt00_assoc00a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05715f08b599ce130",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b03caddde15d1625",
            "subnet_id": "subnet-03632707853315aa3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_nat_gateway.nat00",
            "aws_route_table.nat00_rt00",
            "aws_subnet.privsubnet00a",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat00_rt00_assoc00b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05491a1dde4204a26",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b03caddde15d1625",
            "subnet_id": "subnet-0166e7ff87f77822b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_nat_gateway.nat00",
            "aws_route_table.nat00_rt00",
            "aws_subnet.privsubnet00b",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat00_rt00_assoc00c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09945182825e12007",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b03caddde15d1625",
            "subnet_id": "subnet-054b1f5d3bbf3132a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_nat_gateway.nat00",
            "aws_route_table.nat00_rt00",
            "aws_subnet.privsubnet00c",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:security-group/sg-0bf34c571c8e68379",
            "description": "Ping/SSH/HTTP/HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf34c571c8e68379",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg00",
            "name_prefix": "",
            "owner_id": "116914611070",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "sg-0bf34c571c8e68379",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnet00a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:subnet/subnet-03632707853315aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03632707853315aa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116914611070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "privsubnet00a"
            },
            "tags_all": {
              "Name": "privsubnet00a"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "subnet-03632707853315aa3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnet00b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:subnet/subnet-0166e7ff87f77822b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0166e7ff87f77822b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116914611070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "privsubnet00b"
            },
            "tags_all": {
              "Name": "privsubnet00b"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "subnet-0166e7ff87f77822b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnet00c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:subnet/subnet-054b1f5d3bbf3132a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054b1f5d3bbf3132a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116914611070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "privsubnet00c"
            },
            "tags_all": {
              "Name": "privsubnet00c"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "subnet-054b1f5d3bbf3132a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet00a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:subnet/subnet-041dc9c3f1e75f9c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.255.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041dc9c3f1e75f9c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116914611070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "publicsubnet00a"
            },
            "tags_all": {
              "Name": "publicsubnet00a"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "subnet-041dc9c3f1e75f9c5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet00b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:subnet/subnet-00c704047bdfbad7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.255.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c704047bdfbad7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116914611070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "publicsubnet00b"
            },
            "tags_all": {
              "Name": "publicsubnet00b"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "subnet-00c704047bdfbad7f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet00c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:subnet/subnet-08e00dac3b776f5cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.255.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e00dac3b776f5cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116914611070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "publicsubnet00b"
            },
            "tags_all": {
              "Name": "publicsubnet00b"
            },
            "vpc_id": "vpc-01f7ee6cf357c357e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "subnet-08e00dac3b776f5cb",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:vpc/vpc-01f7ee6cf357c357e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fcf90fa28257478",
            "default_route_table_id": "rtb-03d920f568f9f90f4",
            "default_security_group_id": "sg-0f4b89ccb450e1d60",
            "dhcp_options_id": "dopt-0e9f2b366f1421245",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f7ee6cf357c357e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d920f568f9f90f4",
            "owner_id": "116914611070",
            "region": "eu-central-1",
            "tags": {
              "Name": "vpc00"
            },
            "tags_all": {
              "Name": "vpc00"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "vpc-01f7ee6cf357c357e",
            "region": "eu-central-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc00_egress00",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:security-group-rule/sgr-001f1f508c67819c9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-001f1f508c67819c9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0bf34c571c8e68379",
            "security_group_rule_id": "sgr-001f1f508c67819c9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "sgr-001f1f508c67819c9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.sg00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:security-group-rule/sgr-0a13910d1a4555407",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a13910d1a4555407",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0bf34c571c8e68379",
            "security_group_rule_id": "sgr-0a13910d1a4555407",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "sgr-0a13910d1a4555407",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.sg00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:security-group-rule/sgr-04f1016658890fbfa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04f1016658890fbfa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0bf34c571c8e68379",
            "security_group_rule_id": "sgr-04f1016658890fbfa",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "sgr-04f1016658890fbfa",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.sg00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:security-group-rule/sgr-0ab39555b942cddb0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ab39555b942cddb0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0bf34c571c8e68379",
            "security_group_rule_id": "sgr-0ab39555b942cddb0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "sgr-0ab39555b942cddb0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.sg00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pinggus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116914611070:security-group-rule/sgr-09506f2de75a20913",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8,
            "id": "sgr-09506f2de75a20913",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0bf34c571c8e68379",
            "security_group_rule_id": "sgr-09506f2de75a20913",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116914611070",
            "id": "sgr-09506f2de75a20913",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.sg00",
            "aws_vpc.vpc00"
          ]
        }
      ]
    }
  ]
}